unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/SPARTADMS__Document_Reviewer__c.object-meta.xml
<CustomObject>
    <description>Corporate Document Reviewers</description>
    <label>Document Reviewer</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Reviewer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Reviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>