unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/fields/SPARTADMS__Deactivate__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to deactivate a reviewer.</description>
        <inlineHelpText>It is used to deactivate a reviewer.</inlineHelpText>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </CustomField>