unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/fields/SPARTADMS__Notes_to_Reviewer__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Notes_to_Reviewer__c</fullName>
        <description>Notes to Reviewer</description>
        <inlineHelpText>Notes to Reviewer</inlineHelpText>
        <label>Notes to Reviewer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>