unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/fields/SPARTADMS__Related_Box_User__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Related_Box_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Document Reviewer</description>
        <inlineHelpText>Document Reviewer</inlineHelpText>
        <label>Document Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPARTADMS__Box_Users__c.SPARTADMS__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPARTADMS__Box_Users__c</referenceTo>
        <relationshipLabel>Document Reviewers</relationshipLabel>
        <relationshipName>Document_Reviewers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>