unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/fields/SPARTADMS__Review_Completed_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Review_Completed_Date__c</fullName>
        <description>Review Completed Date</description>
        <inlineHelpText>Review Completed Date</inlineHelpText>
        <label>Review Completed Date</label>
        <type>DateTime</type>
    </CustomField>