unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/fields/SPARTADMS__Review_Submission_Date__c.field-meta.xml
<CustomField>
        <fullName>SPARTADMS__Review_Submission_Date__c</fullName>
        <description>Review Submission Date</description>
        <inlineHelpText>Review Submission Date</inlineHelpText>
        <label>Review Submission Date</label>
        <type>DateTime</type>
    </CustomField>