unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/validationRules/SPARTADMS__ManageDocumentReviewer.validationRule-meta.xml
<ValidationRule>
        <fullName>SPARTADMS__ManageDocumentReviewer</fullName>
        <active>false</active>
        <description>Restrict User To Review On Pending Document</description>
        <errorConditionFormula>OR(
	AND(

                NOT( ISPICKVAL( SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c , 'Working')) , 
		NOT( ISPICKVAL(SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c , 'Under Review')) , 
		  
		OR(
                ISNEW(),
		NOT(ISCHANGED( SPARTADMS__Deactivate__c )), 
		ISCHANGED( SPARTADMS__Related_Box_User__c ) ,
		ISCHANGED( SPARTADMS__Related_Corporate_Document__c ) ,
		ISCHANGED( SPARTADMS__Notes_to_Reviewer__c ) 
		) 


	)
,
	AND(

		ISPICKVAL(SPARTADMS__Related_Corporate_Document__r.SPARTADMS__Version_Status__c, 'Under Review'),
		OR(
		ISCHANGED( SPARTADMS__Related_Box_User__c ) ,
		ISCHANGED( SPARTADMS__Related_Corporate_Document__c ) 
		) 

	)

)</errorConditionFormula>
        <errorMessage>Document Reviewer record is locked.</errorMessage>
    </ValidationRule>