unpackaged/main/default/objects/SPARTADMS__Document_Reviewer__c/validationRules/SPARTADMS__RestrictDocumentAuthorAsReviewer.validationRule-meta.xml
<ValidationRule>
        <fullName>SPARTADMS__RestrictDocumentAuthorAsReviewer</fullName>
        <active>false</active>
        <description>Check if Corporate Document Author is adding as a Reviewer</description>
        <errorConditionFormula>SPARTADMS__Related_Box_User__r.SPARTADMS__Related_Salesforce_User__c = SPARTADMS__Related_Corporate_Document__r.OwnerId</errorConditionFormula>
        <errorMessage>The author of the corporate document cannot be add as a reviewer.</errorMessage>
    </ValidationRule>